Add OrderPanel component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">CountriesPad</string>
     <string name="search_tag">Search …</string>
     <string name="clear_tag">Clear</string>
+    <string name="population_label">Population</string>
+    <string name="area_label">Area</string>
+    <string name="name_label">Name</string>
 </resources>
