Add NavigationIcon to DetailsScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="area_label">Area</string>
     <string name="name_label">Name</string>
     <string name="sort_countries_label">Reorder</string>
+    <string name="back_label">Back</string>
 </resources>
