--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -16,9 +16,25 @@
     <string name="descending_text">Descending</string>
 
     <!-- settings screen -->
+    <string name="theme">Theme</string>
+    <string name="choose_theme">Choose your preferred theme</string>
     <string name="light">Light</string>
     <string name="dark">Dark</string>
-    <string name="system_default">System Default</string>
+    <string name="system_default">System default</string>
+    <string name="general_settings">General Settings</string>
+    <string name="other_settings">Other Settings</string>
+    <string name="share_application">Share Us</string>
+    <string name="invite_friends">Invite your friends to join us</string>
+    <string name="report_issue">Report an issue</string>
+    <string name="help_us">Help us to make SkyCast</string>
+    <string name="rate_us">Rate us</string>
+    <string name="give_feedback">Share your feedback with us</string>
+    <string name="version">Version: 1.0</string>
+    <string name="app_version">Current app version</string>
+    <string name="close">Close</string>
+    <string name="ok_text">OK</string>
+    <string name="settings">Settings</string>
+    <string name="back_text">Back</string>
     <string name="more_settings">More</string>
 
 </resources>
